--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.2",
+    "axios": "^1.7.5",
     "chart.js": "^4.4.4",
+    "install": "^0.13.0",
     "moment": "^2.30.1",
+    "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -16,6 +19,7 @@
     "react-router": "^6.26.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "screen1": "file:",
     "web-vitals": "^2.1.4"
   },
