--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL = https://dreamy-bird-41322.pktriot.net/
+# REACT_APP_BACKEND_URL = https://dreamy-bird-41322.pktriot.net/wnnnmn
+REACT_APP_BACKEND_URL = https://accounts-backend-1ph0.onrender.com/
