--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL = https://accounts-backend-1ph0.onrender.com/
+# REACT_APP_BACKEND_URL = https://accounts-backend-1ph0.onrender.com/
+REACT_APP_BACKEND_URL= https://b2b-backend-uvpc.onrender.com/
